# sinwen_agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: context_aware_agent.py  context_runtime.py  memory_runtime.py  plan_and_solve_agent.py  prompts.py  react_agent.py  reflection_agent.py  simple_agent.py  tool_loop.py
context/: __init__.py  builder.py  compression.py  config.py  gather.py  models.py  scoring.py  selector.py  template.py  tokens.py
core/: agent.py  config.py  llm.py  llm_types.py  message.py
docs/: system-issues.md
memory/: collection_names.py  concept_extractor.py  config.py  consistency_backlog.md  embedding.py  episodic_store.py  factory.py  forget_policy.py  graph_relevance.py  hooks.py  implementation_status.md  manager.py  milvus_guard.py  modules.py  operations.py  orphan_detection.py  outbox_maintenance.py  outbox_status.py  protocols.py  records.py  semantic_outbox_processor.py  semantic_store.py  service.py  tokenizer.py  vector_outbox_processor.py  vector_store.py
prompts/: __init__.py  agent.py  memory.py  rag.py  render.py
rag/: __init__.py  chunker.py  config.py  converter.py  generator.py  implementation_status.md  ingestion.py  manager.py  models.py  outbox_processor.py  outbox_store.py  query_strategy.py  reranker.py  retriever.py  storage.py  vector_store.py
scripts/: memory_reindex.py  memory_status.py  memory_vector_worker.py  try_calculator.py  try_context.py  try_memory.py  try_memory_agent.py  try_plan_and_solve.py  try_rag.py  try_reflection.py  try_search.py
(+101 files in other folders)
