[project]
name = "hello-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "python-dotenv",
    "pydantic>=2.0",
    "tavily-python>=0.7.25",
    "google-search-results>=2.4.2",
    "psycopg[binary]>=3.2",
    "pymilvus>=2.5.0",
    "neo4j>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
